--- a/index.html
+++ b/index.html
@@ -8,9 +8,40 @@
     <title>Weather Dashboard</title>
 </head>
 
-<!--Nav Bar-->
+<body>
 
+<!--"Nav Bar"-->
+<div class="bg-success pt-3 pb-3"> 
+    <div class="container">
+        <h1 class="text-center text-light">Weather Dashboard</h1>
+    </div>
+</div>
+<!--end nav bar-->
 <!--Search for a City-->
+<div class="row">
+    <div class="col-lg-3 bg-light pt-3 pb-3">
+        <h4>Search for a City:</h4>
+        <div class="input-group mb-3">
+            <input class="form-control" type="text" placeholder="" aria-label="default input example">
+            <button type="button" class="btn btn-success">search</button>
+</div>
+<div class="card"> 
+    <ul class="list-group list-group-flush list">
+    </ul>
+</div> 
+<!--end Search for City-->
+<div class="col-lg-9"> 
+    <div id="currentCity" class="mt-4">
+</div>
+
+<div class="mt-4 col-md-12"> 
+    <h5 id="forecastH5" class="mt-3 hide">Next 5 days:</h5>
+    <div id="forecast" class="row"> 
+
+
+
+
+<!--City NAME, DATE,CURRENT WEATHER ICON, TEMP, HUMIDITY,WIND SPEED,HUMIDITY  -->
 
 <!--Saved Cities Under Search Bar-->
 
@@ -19,4 +50,6 @@
 <!--5 Day Forecast-->
 
 <script src="/assets/script.js"></script>
+
+</body>
 </html>
